--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,15 +4,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>User Registry</title>
+  <title>Tech Blog</title>
   <link rel="stylesheet" href="/css/jass.css">
 </head>
 
 <body>
   <header class="display-flex justify-space-between align-center p-2">
-    <h1>
-      User Registry
-    </h1>
+      <button class="home">Home</button>
+      <button class="dash">Dashboard</button>
+      <button class="login">Login</button>
+      <button class="logout">Logout</button>
   </header>
   <main class="container container-fluid mt-5">
     {{{ body }}}
