--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,15 +2,18 @@
 
 <form class="form login-form">
   <div class="form-group">
-    <label for="email-login">email:</label>
-    <input class="form-input" type="text" id="email-login" />
+    <label for="email-login">Username:</label>
+    <input class="form-input" type="text" id="user-login"/>
   </div>
   <div class="form-group">
     <label for="password-login">password:</label>
-    <input class="form-input" type="password" id="password-login" />
+    <input class="form-input" type="password" id="password-login"/>
   </div>
   <div class="form-group">
     <button class="btn btn-primary" type="submit">login</button>
+  </div>
+  <div class="form-group">
+    <button class="btn btn-info signup">signup</button>
   </div>
 </form>
 
