--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -4,7 +4,7 @@
     <div class="row align-center mb-5 blog-post" data-id={{post.id}}>
       <div class="col-md-6">
         <h2>{{post.title}}</h2>
-        <h3>made on {{post.createdAt}}</h3>
+        <h3>made on {{formatDate post.createdAt}}</h3>
       </div>
     </div>
     {{/if}}
