--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tech Blog</title>
-  <link rel="stylesheet" href="/css/jass.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"  integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
@@ -15,12 +15,12 @@
     </h1>
     <ul>
         <nav>
-          <li><button class="btn" id="home">Home</button></li>
-          <li><button class="btn" id="dashboard" >Dashboard</button></li>
+          <li><button class="btn-info" id="home">Home</button></li>
+          <li><button class="btn-info" id="dashboard" >Dashboard</button></li>
           {{#if logged_in}}
-          <li><button class="btn" id="logout">Logout</button></li>
+          <li><button class="btn-danger" id="logout">Logout</button></li>
           {{else}}
-          <li><button class="btn" id="login">Login</button></li>
+          <li><button class="btn-primary" id="login">Login</button></li>
           {{/if}}
         </nav>
     </ul>
