--- a/views/blogpost.handlebars
+++ b/views/blogpost.handlebars
@@ -1,17 +1,20 @@
 <div class="row align-center mb-5">
-  <div class="col-md-6 blog-post" data-id={{post.user_id}}>
-      <h2>{{post.title}}</h2>
-      <h3>made by {{post.user.name}} on {{formatDate post.createdAt}}</h3>
+  <div class="card col-md-6 blog-post" data-id={{post.user_id}}>
+      <h2 class="card-header">{{post.title}}</h2>
+      <div class="card-text">
+      <h3 >made by {{post.user.name}} on {{formatDate post.createdAt}}</h3>
       <h3>{{post.content}}</h3>
+      </div>
   </div>
 </div>
-<h2>Comments:</h2>
+<div class="card col-md-6">
+<h2 class="card-header">Comments:</h2>
 {{#each post.comments as |comment|}}
-<div class="col-md-6 post-comment" data-id={{comment.id}}>
-  <h3>{{comment.content}} by {{comment.user.name}} on {{formatDate comment.createdAt}}</h3>
+<div class="list-group post-comment" data-id={{comment.id}}>
+  <h3 class="list-group-item">{{comment.content}} by {{comment.user.name}} on {{formatDate comment.createdAt}}</h3>
 </div>
 {{/each}}
-
+</div>
 <form class="form comment-form" data-id={{post.id}}>
   <div class="form-group">
     <label for="comment-content">Comment:</label>
