--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -3,6 +3,6 @@
     <h3>{{post.title}} created on {{formatDate post.createdAt}}</h3>
   </div>
   {{/each}}
-  <button class="btn-primary newPost">new post</button>
+  <button class="btn btn-primary newPost">new post</button>
 </div>
 <script src="/js/dashboard.js"></script>
