--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,18 +9,18 @@
 </head>
 
 <body>
-  <header class="display-flex justify-space-between align-center p-2">
+  <header class="d-flex p-2">
     <h1>
       Tech Blog 
     </h1>
     <ul>
         <nav>
-          <li style="margin: 5px;"><button class="btn btn-info" id="home">Home</button></li>
-          <li style="margin: 5px;"><button class="btn btn-info" id="dashboard" >Dashboard</button></li>
+          <li style="margin: 5px; display: inline;"><button class="btn btn-info p-2" id="home">Home</button></li>
+          <li style="margin: 5px; display: inline;"><button class="btn btn-info p-2" id="dashboard" >Dashboard</button></li>
           {{#if logged_in}}
-          <li style="margin: 5px;"><button class="btn btn-danger" id="logout">Logout</button></li>
+          <li style="margin: 5px; display: inline;"><button class="btn btn-danger p-2" id="logout">Logout</button></li>
           {{else}}
-          <li style="margin: 5px;"><button class="btn btn-primary" id="login">Login</button></li>
+          <li style="margin: 5px; display: inline;"><button class="btn btn-primary p-2" id="login">Login</button></li>
           {{/if}}
         </nav>
     </ul>
