--- a/views/editpost.handlebars
+++ b/views/editpost.handlebars
@@ -1,20 +1,21 @@
-<h2>Update Post</h2>
-
+<div class="card col-md-6">
+<h2 class="card-header">Update Post</h2>
 <form class="form update-post-form" data-id={{post.id}}>
-  <div class="form-group">
+  <div class="form-group m-3">
     <label for="post-title">Title:</label>
-    <input class="form-input" type="text" id="post-title" value={{post.title}} />
+    <input class="form-input" type="text" id="post-title" value="{{post.title}}" />
   </div>
-  <div class="form-group">
+  <div class="form-group m-3">
     <label for="post-content">Content:</label>
-    <input class="form-input" type="text" id="post-content" value={{post.content}}/>
+    <input class="form-input" type="text" id="post-content" value="{{post.content}}" />
   </div>
-  <div class="form-group">
+  <div class="form-group m-3">
     <button class="btn btn-info updatePost" type="submit">update post</button>
   </div>
-  <div class="form-group">
+  <div class="form-group m-3">
     <button class="btn btn-danger delete-post">delete post</button>
   </div>
 </form>
+</div>
 
 <script src="/js/editPost.js"></script>
