--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,20 +1,21 @@
-<h2>Login</h2>
 
+<div class="card">
+<h2 class="card-header">Login</h2>
 <form class="form login-form">
-  <div class="form-group">
+  <div class="form-group m-3">
     <label for="email-login">Username:</label>
     <input class="form-input" type="text" id="user-login"/>
   </div>
-  <div class="form-group">
+  <div class="form-group m-3">
     <label for="password-login">password:</label>
     <input class="form-input" type="password" id="password-login"/>
   </div>
-  <div class="form-group">
+  <div class="form-group m-3">
     <button class="btn btn-primary" type="submit">login</button>
   </div>
-  <div class="form-group">
+  <div class="form-group m-3">
     <button class="btn btn-info signup">signup</button>
   </div>
 </form>
-
+</div>
 <script src="/js/login.js"></script>
