--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -1,15 +1,15 @@
 <h2>New Post</h2>
 
-<form class="form post-form" data-id={{user_id}}>
-  <div class="form-group">
+<form class="form post-form border border-radius-5" data-id={{user_id}}>
+  <div class="form-group m-3">
     <label for="post-title">Title:</label>
     <input class="form-input" type="text" id="post-title" />
   </div>
-  <div class="form-group">
+  <div class="form-group m-3">
     <label for="post-content">Content:</label>
     <input class="form-input" type="text" id="post-content" />
   </div>
-  <div class="form-group">
+  <div class="form-group m-3">
     <button class="btn btn-info addPost">add post</button>
   </div>
 </form>
