--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,20 +1,20 @@
-<h2>Signup</h2>
-
+<div class="card">
+<h2 class="card-header">Signup</h2>
 <form class="form signup-form">
-  <div class="form-group">
+  <div class="form-group m-3">
     <label for="email-login">Username:</label>
     <input class="form-input" type="text" id="user-signup" />
   </div>
-  <div class="form-group">
+  <div class="form-group m-3">
     <label for="password-login">password:</label>
     <input class="form-input" type="password" id="password-signup" />
   </div>
-  <div class="form-group">
+  <div class="form-group m-3">
     <button class="btn btn-primary" type="submit">signup</button>
   </div>
-  <div class="form-group">
+  <div class="form-group m-3">
     <button class="btn btn-info login">login</button>
   </div>
 </form>
-
+</div>
 <script src="/js/signup.js"></script>
